fix: hero passage selection spacing

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -73,7 +73,7 @@ nav.navbar .navbar-burger {
 
   min-width: 600px;
   margin-top: 35px;
-  margin-bottom: -45px;
+  margin-bottom: -35px;
 }
 
 .hero-navigation .hero-passage-selection .box {
